tests/rustdoc-ui/issue-61732.stderr
error[E0433]: failed to resolve: maybe a missing crate `r#mod`?
  --> $DIR/issue-61732.rs:3:15
   |
LL | pub(in crate::r#mod) fn main() {}
   |               ^^^^^ maybe a missing crate `r#mod`?
   |
   = help: consider adding `extern crate r#mod` to use the `r#mod` crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
